--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "dockerized-node-app",
   "version": "1.0.0",
   "description": "a sample nodejs application containerized",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
