mongo hostname should depend on the current environment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a sample nodejs application containerized",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "cross-env NODE_ENV=production node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/vpellegrino/dockerized-node-app#readme",
   "dependencies": {
+    "cross-env": "^6.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
     "nodemon": "^1.19.3"
